    * Fixed hardcoded urls to the documentation site in the default template. (Bug 2718)
    * Removed table "roles_permissions", no longer needed. (Bug 2705)
    * All users are now always considered to have the "Users" role regardless of what the database says. (Bug 2770)
    * Made an ant-target "distcheck" for verifying that the source distribution is buildable. (Bug 2774)


Version 1.11.1

    Of interest to administrators:

    * In the fix to bug 2452 in 1.11.0, we changed the way files in file documents are saved to disk,
      forgetting backwards-compatibility.
      Administrators had to remove the "_se"-suffix from all files under "WEB-INF/uploads",
      or the files would not be found after an upgrade.
      This was fixed so the "_se" suffix is recognized again,
      and will be automatically removed when the file document is saved.
      Removing the suffix from the files on upgrade is still recommended. (Bug 2650)
    * On a related note, don't show "WEB-INF/uploads" in "FileAdmin" by default. (Bug 2640)
    * Made "/RD/*"-paths (as seen in the log) work again. (Bug 2633)


Version 1.11.0:

    Of importance to administrators:

    * The "SelectMethod" in the JdbcUrl in "server.properties" MUST be set to "SelectMethod=cursor",
      otherwise you will get the error "Can't start a cloned connection while in manual transaction mode."
      when you try to save a document. This is due to the new transaction code.
      The default used to be "SelectMethod=direct". (Bug 2569)

    Of interest to users:

    * Made it possible to upload several files in one filedocument. (Bug 2452)
    * Fixed a race condition that could cause menus to be cleared when editing a text-document. (Bug 2569)
    * File-extension "xls" on uploaded files is now recognized as a Microsoft Excel Spreadsheet. (Bug 2534)
    * Fixed a problem with viewing uploaded PDF files with Adobe Acrobat 6.0.1. (Bug 2511)