@@ -54,9 +54,9 @@ FileAdminRootPaths = css/;images/;imcms/;javascript/;jsp/;login/;user/;WEB-INF/f
 # See for example http://www.cio.ufl.edu/projects/directory/ldap-schema/oc-INETORGPERSON.html
 # or http://www.faqs.org/rfcs/rfc2798.html for details.
 
-# Uncomment these to enable LDAP
-ExternalAuthenticator = LDAP
-ExternalUserAndRoleMapper = LDAP
+# Set both of these to LDAP to enable LDAP
+ExternalAuthenticator = @external-authenticator@
+ExternalUserAndRoleMapper = @external-user-and-role-registry@
 
 LdapUrl = @ldap-url@
 LdapBindDn = @ldap-bind-dn@
